main.css
/* ... */
/********************
 * Navigation Bar
 ********************/

nav {
	white-space: nowrap;
	font-size: 0px;
}

nav > ul > li {
	display: inline-block;
	margin-right: 10px;
	transition: margin-right .5s;
}

nav > ul > li > a {
	display: inline-block;

	padding-right: 20px;
	padding-left: 20px;
	padding-top: 10px;
	padding-bottom: 10px;
	
	text-decoration: none;
	border-bottom-width: 3px;
	border-bottom-style: solid;
	border-top-left-radius: 8px;
	border-top-right-radius: 8px;

	opacity: 0.7;
	filter: alpha(opacity=7); /* For IE8 and earlier */
	
	-webkit-transition: padding .5s;
	-moz-transition: padding .5s;
	-o-transition: padding .5s;
	-ms-transition: padding .5s;
	transition: padding .5s;
}

nav > ul > li > a:hover,
nav > ul > li > a:focus {
	padding-right: 30px;
	padding-left: 30px;
	background-color: rgba(0, 0, 0, .25);
  
	opacity: 0.85;
	filter: alpha(opacity=85); /* For IE8 and earlier */
}

nav > ul > .active > a
{
	padding-right: 30px;
	padding-left: 30px;
	
	padding-bottom: 7px;
	border-bottom-width: 6px;
	background-color: rgba(0, 0, 0, .25);

	opacity: 0.85;
	filter: alpha(opacity=85); /* For IE8 and earlier */	
}

nav > ul > .active > a:hover,
nav > ul > .active > a:focus {
	background-color: rgba(0, 0, 0, .35);
	
	opacity: 1.0;
	filter: alpha(opacity=100); /* For IE8 and earlier */
}

.fa {
	font-size: 24.6px;
	padding: 10px;
	text-align: center;
	text-decoration: none;
	margin: 0px;
	vertical-align: middle;
	color: rgb(176, 176, 176);
}

.fa:focus,
.fa:active,
.fa:visited {
	color: rgb(176, 176, 176);
}

.fa:hover{
	color: rgb(248, 248, 248);
}


/********************
 * Post Navigation
 ********************/

.postnav {
	padding-top: 20px;
}

.postnav > a {
	border: none;
	padding: 10px 20px;
	text-align: center;
	text-decoration: none;
	display: inline-block;
	position: relative;
	
	max-width: 45%;
	
	-webkit-transition: padding .5s;
	-moz-transition: padding .5s;
	-o-transition: padding .5s;
	-ms-transition: padding .5s;
	transition: padding .5s;
	
	opacity: 0.7;
	filter: alpha(opacity=7); /* For IE8 and earlier */
	
	font-weight: bold;
	
	overflow: hidden;
}

.postnav > a:focus,
.postnav > a:active,
.postnav > a:visited {
	color: rgb(80, 80, 90);
}

.postnav > a:hover,
.postnav > a:focus {
	padding-left: 40px;
	padding-right: 40px;
	
	color: rgb(80, 80, 90);
	
	opacity: 0.85;
	filter: alpha(opacity=85); /* For IE8 and earlier */
}

.postnav > .prev {
	float: left;
	left: 0px;
	
	border-left-width: 3px;
	border-left-style: solid;
	border-top-right-radius: 8px;
	border-bottom-right-radius: 8px;
}

.postnav > .next {
	float: right;
	right: 0px;
	
	border-right-width: 3px;
	border-right-style: solid;
	border-top-left-radius: 8px;
	border-bottom-left-radius: 8px;
}

.pagenav {
	padding-top: 20px;
	text-align: center;
}

.pagenav > span {
	border: none;
	padding: 10px 20px;
	text-align: center;
	text-decoration: none;
	display: inline-block;
	position: relative;
	
	max-width: 45%;
	
	opacity: 0.4;
	filter: alpha(opacity=4); /* For IE8 and earlier */
	
	font-weight: bold;
	
	overflow: hidden;
}

.pagenav > a {
	border: none;
	padding: 10px 20px;
	text-align: center;
	text-decoration: none;
	display: inline-block;
	position: relative;
	
	max-width: 45%;
	
	-webkit-transition: padding .5s;
	-moz-transition: padding .5s;
	-o-transition: padding .5s;
	-ms-transition: padding .5s;
	transition: padding .5s;
	
	opacity: 0.7;
	filter: alpha(opacity=7); /* For IE8 and earlier */
	
	font-weight: bold;
	
	overflow: hidden;
}

.pagenav > a:focus,
.pagenav > a:active,
.pagenav > a:visited {
	color: rgb(80, 80, 90);
}

.pagenav > a:hover,
.pagenav > a:focus {
	padding-left: 30px;
	padding-right: 30px;
	
	color: rgb(80, 80, 90);
	
	opacity: 0.85;
	filter: alpha(opacity=85); /* For IE8 and earlier */
}

.pagenav > .newer {
	border-right-width: 3px;
	border-right-style: solid;
	border-top-left-radius: 8px;
	border-bottom-left-radius: 8px;
}

.pagenav > .older {
	border-left-width: 3px;
	border-left-style: solid;
	border-top-right-radius: 8px;
	border-bottom-right-radius: 8px;
}

.pagenav > .middle {
	border-radius: 8px;
}


/********************
 * Small device CSS
 ********************/
@media (max-width: 820px) {
	body { font-size: 16px;}
	h2 { font-size: 30px;}
	h3 { font-size: 22px;}
	header > div > h1 {font-size: 44px;}
	header > div > h2 {font-size: 18px;}
	nav > ul > li { margin-right: 4px;}
	nav > ul > li > a { padding-right: 10px; padding-left: 10px; font-size: 16px;}
	nav > ul > .active > a { padding-right: 20px; padding-left: 20px;}
	nav > ul > li > a:hover,
	nav > ul > li > a:focus { padding-right: 20px; padding-left: 20px;}
	.box {padding-top: 146px; padding-left: 10px; padding-right: 10px; }
	.project{width: 96px;}
	.portrait{width: 105px; padding-left: 20px; padding-right: 20px;}
	.fa { font-size: 19.4px; padding: 11px; padding-left: 6px; padding-right: 6px;}
}

@media (max-width:590px) {
	body { font-size: 14px;}
	h2 { font-size: 26px;}
	h3 { font-size: 20px;}
	header > div > h1 {font-size: 30px; padding-top: 10px;}
	header > div > h2 {font-size: 12px; padding-bottom: 10px;}
	nav > ul > li { margin-right: 2px;}
	nav > ul > li > a { padding-right: 2px; padding-left: 2px; font-size: 14px;}
	nav > ul > .active > a { padding-right: 10px; padding-left: 10px;}
	nav > ul > li > a:hover,
	nav > ul > li > a:focus { padding-right: 10px; padding-left: 10px;}
	.box {padding-top: 110px; padding-left: 5px; padding-right: 5px; }
	.project{width: 64px;}
	.portrait{width: 70px; padding-left: 0px; padding-right: 0px;}
	.fa { font-size: 15.8px; padding: 12px; padding-left: 4px; padding-right: 4px;}
}
@media (max-width:420px) {
	div.social { display: none !important; }
}

